test/files/neg/macro-invalidsig-ctx-badargc/Impls_1.scala
import scala.reflect.api.{Mirror => Ctx}

object Impls {
  def foo = ???
}
